load images and display it

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template</title>
+    <title>Infinite scroll</title>
     <link
       rel="stylesheet"
+      type="image/png"
       href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design"
     />
     <link rel="stylesheet" href="style.css" />
@@ -15,6 +16,16 @@
     />
   </head>
   <body>
+    <!-- title -->
+    <h1>UNSPLASH API - INFINITE SCROLL</h1>
+    <!-- loader -->
+    <div class="loader" id="loader">
+      <img src="loader.svg" alt="Loading" />
+    </div>
+    <!-- images -->
+    <div class="image-container" id="image-container"></div>
+
+    <!-- script... -->
     <script src="script.js"></script>
   </body>
 </html>
